--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@radix-ui/react-select": "^2.0.0",
     "@tanstack/react-query": "^5.22.2",
+    "install": "^0.13.0",
     "json-server": "^1.0.0-alpha.23",
     "localforage": "^1.10.0",
     "lucide-react": "^0.335.0",
     "match-sorter": "^6.3.4",
+    "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
